Add i18n context and visual redesign
Introduce a LanguageContext with en/es locale files and wrap the app with LanguageProvider to enable translations (useLanguage / t). Update multiple pages and components (Header, Footer, Home, Bio, Lab, Works) to use translations and language toggle. Apply a broad visual redesign: switch to a black/white theme, update fonts, spacing, typography, and component styles (buttons, cards, pads, faders, grids). Update index.html (fonts, tailwind config, styles), index.tsx, site content, and UI copy; adjust layout/animation behavior and refine project/work listings. Minor CMS config tweak in public/admin/config.yml.

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -26,7 +26,12 @@ collections:
               - {label: "ID (Unique)", name: "id", widget: "string"}
               - {label: "Title", name: "title", widget: "string"}
               - {label: "Category", name: "category", widget: "select", options: ["Sound Design", "Composition", "UI SFX", "Foley"]}
-              - {label: "Description", name: "description", widget: "text"}
+              - label: "Description"
+                name: "description"
+                widget: "object"
+                fields:
+                  - {label: "English", name: "en", widget: "text"}
+                  - {label: "Español", name: "es", widget: "text"}
               - {label: "Tags", name: "tags", widget: "list", field: {label: "Tag", name: "tag", widget: "string"}}
               - {label: "Image", name: "imageUrl", widget: "image"}
               - {label: "Video URL", name: "videoUrl", widget: "string", required: false, hint: "YouTube link, MP4 path, or Drive ID"}
